5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1668_1396.log
== SUBMITION (2019-04-15 19:08:05) 
-- CODE:
conta = float(input("consumido:"))

if (conta < 300):
   mensagem = (conta * 0.1) + conta

else (conta > 300):
	mensagem = (conta * 0.06) + conta

print(round(mensagem, 2))
-- EXECUTION TIME:
0.200296
-- ERROR:
  File "/home/codebench/codes/1668/1396/main.py", line 6
    else (conta > 300):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:08:09) 
-- CODE:
conta = float(input("consumido:"))

if (conta < 300):
   mensagem = (conta * 0.1) + conta

else (conta > 300):
	mensagem = (conta * 0.06) + conta

print(round(mensagem, 2))
-- ERROR:
File "XXXX", line 6
    else (conta > 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:08:38) 
-- CODE:
conta = float(input("consumido:"))

if (conta <= 300):
   mensagem = (conta * 0.1) + conta

else (conta > 300):
	mensagem = (conta * 0.06) + conta

print(round(mensagem, 2))
-- ERROR:
File "XXXX", line 6
    else (conta > 300):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:08:41) 
-- CODE:
conta = float(input("consumido:"))

if (conta <= 300):
   mensagem = (conta * 0.1) + conta

else (conta > 300):
	mensagem = (conta * 0.06) + conta

print(round(mensagem, 2))
-- EXECUTION TIME:
0.188111
-- ERROR:
  File "/home/codebench/codes/1668/1396/main.py", line 6
    else (conta > 300):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:08:56) 
-- CODE:
conta = float(input("consumido:"))

if (conta <= 300):
   mensagem = (conta * 0.1) + conta

else :
	mensagem = (conta * 0.06) + conta

print(round(mensagem, 2))
-- EXECUTION TIME:
0.117639
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
387.06
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
530.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
